# BS4_Products_Parsing

./: .gitignore  README.md  main.py  pyproject.toml
