[tool.poetry]
name = "beautifulsoupproductsparsingintocsv"
version = "0.1.0"
description = ""
authors = ["Ilya <121868806+Lio-Kay@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
bs4 = "^0.0.1"
fake-useragent = "^1.1.3"
lxml = "^4.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
